[package]
name = "yans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
tokio = { version = "1.29", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.72"
thiserror = "1.0.44"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11.18", features = ["json"] }
futures = "0.3.28"

[profile.dev.package.sqlx-macros]
opt-level = 3

